fix spacing on PC-605

--- a/vufind/themes/msul/less/custom.less
+++ b/vufind/themes/msul/less/custom.less
@@ -1278,42 +1278,63 @@ body.template-dir-myresearch.template-name-profile {
   }
 }
 
-// Alignment for flipped advanced search
+// Alignment for flipped advanced search select & input fields
 
 .adv-term-type {
   float:none;
   margin-bottom:1%;
 }
 .adv-term-input,
-.adv-term-op {
+.adv-term-op,
+.adv-group-match {
   max-width:80%;
   float:left;
-  }
-.eds-adv,
-.adv-submit {
-  margin-bottom:1rem;
 }
 
 @media (min-width: 768px) {
-  .eds-adv .adv-search:first-of-type .adv-term-input {
-    margin-left: 0;
+  .eds-adv {
+    .adv-search:first-of-type {
+      .adv-term-input {
+        margin-left: 0;
+       }
+      .adv-term-type {
+        margin-left: 17%;
+      }
+    }
   }
-  .eds-adv .adv-search:first-of-type .adv-term-type {
-    margin-left: 17%;
-  }
-  .adv-search .adv-term-type {
-    margin-right:1%;
-  }
-  .adv-search .adv-term-input {
+  .adv-search {
+    .adv-term-type {
+      margin-right:1%;
+    }
+  .adv-term-input {
     margin-right:0;
+    }
   }
 }
 
+// space below advanced search button mobile and up
+
+fieldset.eds,
+fieldset.solr-facets {
+  margin-top:1rem;
+}
+
+// spacing below advanced search items
+
+#groupPlaceHolder,
+.adv-submit,
+.eds-adv {
+  margin-bottom:1rem;
+}
+
+
 //spacing between selection boxes on catalog advanced search
+
 #advSearchForm {
   .solr-adv-facet {
     .form-control {
       padding: 0.1rem;
+      margin-bottom:1rem;
     }
   }
   @media (min-width: 768px) {
@@ -1323,8 +1344,15 @@ body.template-dir-myresearch.template-name-profile {
     }
   }
 }
-//reduce spacing below headers on advanced search
-fieldset.eds legend {
-  margin-bottom:0.2rem;
-  font-size:20px;
+//reduce font size and spacing below headers on catalog advanced search
+
+#advSearchForm {
+  fieldset {
+    margin-bottom:1rem;
+  legend {
+    margin-bottom:1rem;
+    font-size:20px;
+    }
+  }
 }
+
